<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:title="@string/Home"
        android:enabled="true"
        android:icon="@drawable/baseline_home_24"
        />
    <item
        android:id="@+id/projects"
        android:enabled="true"
        android:icon="@drawable/baseline_folder_24"
        android:title="@string/projects" />
    <item
        android:id="@+id/person"
        android:enabled="true"
        android:title="@string/profile"
        android:icon="@drawable/baseline_person_24"
        />
    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:title="@string/settings"
        android:icon="@drawable/baseline_settings_24"
       />
</menu>